--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.2",
     "camelcase-keys": "^6.2.2",
     "clsx": "^1.1.1",
@@ -19,6 +20,7 @@
     "notistack": "^0.9.17",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.4",
     "react-avatar-edit": "^0.8.3",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.0",
